--- a/themes/enov-hugo/layouts/contact/list.html
+++ b/themes/enov-hugo/layouts/contact/list.html
@@ -33,7 +33,7 @@
     </div>
     <div class="row justify-content-center mt-5">
       <div class="col-lg-8 text-center mt-4">
-        <form class="contact__form" method="post" data-netlify="true">
+        <form class="contact__form" name="waiting-list" method="post" data-netlify="true">
           <h3 class="text-md">{{ i18n "contact_us" }}</h3>
           <div class="form-group">
             <input name="name" type="text" class="form-control" placeholder="Your Name">
