add waitlist form name

--- a/themes/enov-hugo/layouts/waitlist/list.html
+++ b/themes/enov-hugo/layouts/waitlist/list.html
@@ -27,7 +27,7 @@
     </div>
     <div class="row justify-content-center mt-5">
       <div class="col-lg-8 text-center mt-4">
-        <form class="contact__form" name="contact-us" method="post" data-netlify="true">
+        <form class="contact__form" name="waitlist" method="post" data-netlify="true">
           <h3 class="text-md">{{ i18n "join_waitlist" }}</h3>
           <div class="form-group">
             <input name="name" type="text" class="form-control" placeholder="Your Name">
