--- a/themes/enov-hugo/layouts/index.html
+++ b/themes/enov-hugo/layouts/index.html
@@ -100,7 +100,8 @@
       {{ $delay := mul $index 100 }}
       <div class="col-lg-3 col-md-6 col-sm-6">
         <div class="counter-item text-center mb-5 mb-lg-0 " data-aos="fade-up" data-aos-delay="{{ $delay }}">
-          <h3 class="mb-0"><span class="counter-stat" data-count="{{ .count }}">0</span> {{ .unit }}</h3>
+          <i class="{{ .icon }} text-color text-lg"></i>
+          <h3 class="mb-0 mt-4"><span class="counter-stat" data-count="{{ .count }}">0</span> {{ .unit }}</h3>
           <p class="text-muted">{{ .title }}</p>
         </div>
       </div>
