--- a/themes/enov-hugo/layouts/404.html
+++ b/themes/enov-hugo/layouts/404.html
@@ -6,4 +6,4 @@
       </div>
     </main>
 {{ end }}
-<img src="images/404.jpg" alt="" class="img-fluid">
+<img src="images/404.png" alt="" class="img-fluid">
