update bg for 404

--- a/themes/enov-hugo/assets/scss/_common.scss
+++ b/themes/enov-hugo/assets/scss/_common.scss
@@ -363,5 +363,13 @@ a:focus {
   }
 
 
-
+  #404 {
+    body {
+      background: "/images/404.png" no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      background-size: cover;
+      -o-background-size: cover;
+    }
+  }
 }
