--- a/themes/enov-hugo/layouts/404.html
+++ b/themes/enov-hugo/layouts/404.html
@@ -1,9 +1,9 @@
 <!-- <div style="background-image: url('img_girl.jpg');"></div> -->
 {{ define "main"}}
-    <main id="main">
+    <main id="404">
       <div>
        <h1 id="title"><a href="{{ "/" | relURL }}">Go Home</a></h1>
       </div>
     </main>
 {{ end }}
-<img src="images/404.png" alt="" class="img-fluid">
+<!-- <img src="images/404.png" alt="" class="img-fluid"> -->
