--- a/themes/enov-hugo/layouts/404.html
+++ b/themes/enov-hugo/layouts/404.html
@@ -1,8 +1,6 @@
 <!-- <div style="background-image: url('img_girl.jpg');"></div> -->
-{{ define "main"}}
-    <main id="main">
-      <div>
-       <h1 id="title"><a href="{{ '/' | relURL }}">Go Home</a></h1>
-      </div>
-    </main>
-{{ end }}
+<main id="404">
+    <div>
+    <h1 id="title"><a href="{{ '/' | relURL }}">Go Home</a></h1>
+    </div>
+</main>
