--- a/themes/enov-hugo/layouts/404.html
+++ b/themes/enov-hugo/layouts/404.html
@@ -1,5 +1,9 @@
 <!-- <div style="background-image: url('img_girl.jpg');"></div> -->
-<main id="404">
+<main id="404" style="background: '/images/404.png' no-repeat center center fixed;
+                    -webkit-background-size: cover;
+                    -moz-background-size: cover;
+                    background-size: cover;
+                    -o-background-size: cover;">
     <div>
     <h1 id="title"><a href="{{ '/' | relURL }}">Go Home</a></h1>
     </div>
