--- a/themes/enov-hugo/layouts/partials/footer.html
+++ b/themes/enov-hugo/layouts/partials/footer.html
@@ -2,7 +2,8 @@
 <footer class="footer section">
   <div class="container">
     <div class="row">
-      <div class="col-lg-3 ml-auto col-sm-6">
+      <!-- <div class="col-lg-3 ml-auto col-sm-6"> -->
+      <div class="col-lg-6 ml-auto col-sm-6">
         <div class="widget">
           <a class="d-block mb-4" href="{{ .Site.BaseURL | relLangURL }}">
             <img src="{{ .Site.Params.logo_footer | absURL }}" alt="{{ .Site.Title }}" class="img-fluid" width="150">
@@ -25,7 +26,7 @@
           </ul>
         </div>
       </div>
-      <div class="col-lg-2 col-md-6 col-sm-6">
+      <!-- <div class="col-lg-2 col-md-6 col-sm-6">
         <div class="widget">
           <h4 class="text-capitalize mb-4 text-white">{{ i18n "quick_links"}}</h4>
           <ul class="list-unstyled footer-menu lh-35">
@@ -34,8 +35,8 @@
             {{ end }}
           </ul>
         </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-6">
+      </div> -->
+      <!-- <div class="col-lg-3 col-md-6 col-sm-6">
         <div class="widget">
           <h4 class="text-capitalize mb-4 text-white">{{ i18n "follow_us" }}</h4>
           <ul class="list-unstyled footer-socials">
@@ -44,7 +45,7 @@
             {{ end }}
           </ul>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="footer-btm pt-4 pb-3">
